--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --bg: #fee8ff;
-  --text: rgb(32, 32, 32);
+  --bg: #ffffff;
+  --text: #293161;
   --btn: #3673fd;
   --bgSoft: #2d2b42;
-  --textSoft: #e5e5e5;
+  --textSoft: #dbebff;
   --bgGradient: linear-gradient(100deg, rgb(194, 204, 229) 0%, rgb(207, 178, 220) 54%, rgb(138, 163, 188) 100%);
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -19,7 +19,7 @@
 }
 
 body {
-  background: var(--bgGradient);
+  background-color: var(--bg);
   color: var(--text);
+  padding: 0 70px;
 }
-
